--- a/software/tools/linuxkit/projects/compose/image/Dockerfile
+++ b/software/tools/linuxkit/projects/compose/image/Dockerfile
@@ -1,10 +1,10 @@
-FROM docker/compose:1.13.0
+FROM docker/compose:1.22.0
 # because compose requires all sorts of dynamic libs, including glibc, it is much easier to
 #   add docker client to compose than the reverse
 
-ENV DOCKER_BUCKET get.docker.com
-ENV DOCKER_VERSION 17.05.0-ce
-ENV DOCKER_SHA256 340e0b5a009ba70e1b644136b94d13824db0aeb52e09071410f35a95d94316d9
+ENV DOCKER_BUCKET download.docker.com
+ENV DOCKER_VERSION 18.06.0-ce
+ENV DOCKER_SHA256 1c2fa625496465c68b856db0ba850eaad7a16221ca153661ca718de4a2217705
 
 # we need docker compose and docker load
 # also need curl to test availability of docker API
@@ -12,10 +12,10 @@ RUN apk add --update curl
 
 # we only need the client
 RUN set -x \
-	&& curl -fSL "https://${DOCKER_BUCKET}/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz" -o docker.tgz \
+	&& curl -fSL "https://${DOCKER_BUCKET}/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz" -o docker.tgz \
 	&& echo "${DOCKER_SHA256} *docker.tgz" | sha256sum -c - \
 	&& tar -xzvf docker.tgz \
-	&& mv docker/docker /usr/bin/ \
+	&& mv docker/docker /usr/local/bin/ \
 	&& rm -rf docker docker.tgz \
 	&& docker -v
 
