Squashed 'software/osmo/system-images/git/meta-sysmocom-bsp/recipes-sysmobts/osmo-bts/files/osmo-bts/' changes from 33da462a2b..36413548e0
36413548e0 common/pcu_sock.c: cosmetic: explicitly address lchan
2d21c9ff22 abis: inp_s_cbfn: Improve logging signal related information
3ee09a47c1 sysmo, virtual: properly handle BS-AG-BLKS-RES as received from BSC
173555dab7 Fix computing CCCH block number from frame number
2c1a46a2dd paging_test: Fix AGCH/PCH split test for second half of 102 multiframe
85485c3db4 contrib/jenkins_*.sh: drop rudimentary '--with-osmo-pcu'
eeba57652a vty: mark 'rtp bind-ip' deprecated, not hidden
4e3fdbc738 lc15bts_mgr_vty: Ensure writing well-formed config files
73dd4ff027 ensure all config file examples are well-formed
080302f870 lc15: led_sleep_cb: pass correct ptr to llist_move_tail
b9f3e14ba6 common/rsl.c: tweak log message in lapdm_rll_tx_cb()
9ce4d91948 CBCH: Some more scheduler_mframe cleanup
b222f6666d CBCH: Fix CBCH implementation for osmo-bts-trx
6434ba9f90 CBCH: sprinkle some OMSO_ASSERT() and guard against talloc failure
c799c70c59 CBCH: Add FIXME comments on queue overflow/underflow handling
3c87f5c3ea get_lchan_by_chan_nr(): Fix resolution of CBCH
3941cf4479 CBCH: Fix CBCH via L1SAP for osmo-bts-{sysmo,octphy,litecell15}
7c82b4a872 l1sap/scheduler: Consistently print chan_nr as hex number
19795c5ab2 lc15: rewrite and refactor code to print hwversion description
a8041edb5b lc15: fsync requires fd instead of file stream
5fceb9fc3a lc15: vty: Add missing include for lchan_deactivate
0c1ca01084 osmo-bts-trx/l1_if.c: cosmetic: fix typo in debug msg
755088a79c doc/examples/Makefile: Install bts-mgr cfg files used by systemd services
27a86005f3 measurement: fix unit-test test_lchan_meas_process_measurement
c78759055a measurement: remove missed interval end detection
6d701d0e05 cosmetic: fix typo in comment
8a6f6c5a16 Install sample cfg file to /etc/osmocom
65d3cc7753 Install systemd services with autotools
17577b7c00 fix handling of odd p

--- a/configure.ac
+++ b/configure.ac
@@ -70,7 +70,6 @@ PKG_CHECK_MODULES(LIBOSMOCODEC, libosmocodec >= 0.11.0)
 PKG_CHECK_MODULES(LIBOSMOCODING, libosmocoding >= 0.11.0)
 PKG_CHECK_MODULES(LIBOSMOABIS, libosmoabis >= 0.5.0)
 PKG_CHECK_MODULES(LIBOSMOTRAU, libosmotrau >= 0.5.0)
-PKG_CHECK_MODULES(ORTP, ortp)
 
 AC_MSG_CHECKING([whether to enable support for sysmobts calibration tool])
 AC_ARG_ENABLE(sysmobts-calib,
@@ -250,6 +249,13 @@ if test "$enable_octphy" = "yes" ; then
 			[],
 			[#include <octphy/octvc1/hw/octvc1_hw_api.h>])
 
+	AC_CHECK_MEMBER([tOCTVC1_GSM_MSG_OVERSAMPLE_SELECT_16X_MODIFY_CMD.ulOversample16xEnableFlag],
+			AC_DEFINE([OCTPHY_USE_16X_OVERSAMPLING],
+			[1],
+			[Define to 1 if your octphy header files support 16x oversampling]),
+			[],
+			[#include <octphy/octvc1/gsm/octvc1_gsm_api.h>])
+
 	CPPFLAGS=$oldCPPFLAGS
 fi
 
@@ -272,6 +278,22 @@ if test "$enable_litecell15" = "yes"; then
 	PKG_CHECK_MODULES(LIBSYSTEMD, libsystemd)
 	CPPFLAGS=$oldCPPFLAGS
 fi
+
+# https://www.freedesktop.org/software/systemd/man/daemon.html
+AC_ARG_WITH([systemdsystemunitdir],
+     [AS_HELP_STRING([--with-systemdsystemunitdir=DIR], [Directory for systemd service files])],,
+     [with_systemdsystemunitdir=auto])
+AS_IF([test "x$with_systemdsystemunitdir" = "xyes" -o "x$with_systemdsystemunitdir" = "xauto"], [
+     def_systemdsystemunitdir=$($PKG_CONFIG --variable=systemdsystemunitdir systemd)
+
+     AS_IF([test "x$def_systemdsystemunitdir" = "x"],
+   [AS_IF([test "x$with_systemdsystemunitdir" = "xyes"],
+    [AC_MSG_ERROR([systemd support requested but pkg-config unable to query systemd package])])
+    with_systemdsystemunitdir=no],
+   [with_systemdsystemunitdir="$def_systemdsystemunitdir"])])
+AS_IF([test "x$with_systemdsystemunitdir" != "xno"],
+      [AC_SUBST([systemdsystemunitdir], [$with_systemdsystemunitdir])])
+AM_CONDITIONAL([HAVE_SYSTEMD], [test "x$with_systemdsystemunitdir" != "xno"])
 
 AC_MSG_RESULT([CFLAGS="$CFLAGS"])
 AC_MSG_RESULT([CPPFLAGS="$CPPFLAGS"])
@@ -299,4 +321,8 @@ AC_OUTPUT(
     tests/tx_power/Makefile
     tests/power/Makefile
     tests/meas/Makefile
+    doc/Makefile
+    doc/examples/Makefile
+    contrib/Makefile
+    contrib/systemd/Makefile
     Makefile)
