--- a/contrib/systemd/osmo-bts-lc15.service
+++ b/contrib/systemd/osmo-bts-lc15.service
@@ -5,7 +5,7 @@ Description=osmo-bts for LC15 / sysmoBTS 2100
 Type=simple
 ExecStartPre=/bin/sh -c 'echo 1 > /sys/class/leds/usr0/brightness'
 ExecStartPre=/bin/sh -c 'echo 1 > /sys/class/leds/usr1/brightness'
-ExecStart=/usr/bin/osmo-bts-lc15 -t 2 -s -c /etc/osmocom/osmo-bts.cfg -M
+ExecStart=/usr/bin/osmo-bts-lc15 -t 2 -s -c /etc/osmocom/osmo-bts-lc15.cfg -M
 ExecStopPost=/bin/sh -c 'echo 1 > /sys/class/leds/usr0/brightness'
 ExecStopPost=/bin/sh -c 'echo 0 > /sys/class/leds/usr1/brightness'
 Restart=always
