--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,6 @@ Build-Depends: debhelper (>= 9),
                libosmocore-dev,
                libosmo-abis-dev,
                libgps-dev,
-               libortp-dev,
                txt2man
 Standards-Version: 3.9.8
 Vcs-Browser: http://git.osmocom.org/osmo-bts/
@@ -20,6 +19,7 @@ Homepage: https://projects.osmocom.org/projects/osmobts
 
 Package: osmo-bts-trx
 Architecture: any
+Conflicts: osmo-bts
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: osmo-bts-trx GSM BTS with osmo-trx
  osmo-bts-trx to be used with the osmo-trx application
@@ -34,8 +34,17 @@ Description: Debug symbols for the osmo-bts-trx
 
 Package: osmo-bts-virtual
 Architecture: any
+Conflicts: osmo-bts
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Virtual Osmocom GSM BTS (no RF hardware; GSMTAP/UDP)
  This version of OsmoBTS doesn't use actual GSM PHY/Hardware/RF, but
  utilizes GSMTAP-over-UDP frames for the Um interface.  This is useful
  in fully virtualized setups e.g. in combination with OsmocomBB virt_phy.
+
+Package: osmo-bts-virtual-dbg
+Architecture: any
+Section: debug
+Priority: extra
+Depends: osmo-bts-virtual (= ${binary:Version}), ${misc:Depends}
+Description: Debug symbols for the osmo-bts-virtual
+ Make debugging possible
