--- a/Makefile.am
+++ b/Makefile.am
@@ -1,18 +1,17 @@
 AUTOMAKE_OPTIONS = foreign dist-bzip2 1.6
 
-SUBDIRS = include src tests
+SUBDIRS = include src tests doc contrib
 
 
 # package the contrib and doc
 EXTRA_DIST = \
-	contrib/dump_docs.py contrib/screenrc-l1fwd contrib/osmo-bts-sysmo.service \
+	contrib/dump_docs.py contrib/screenrc-l1fwd \
 	contrib/l1fwd.init contrib/screenrc-sysmobts contrib/respawn.sh \
-	doc/examples/sysmo/osmo-bts.cfg \
-	doc/examples/sysmo/sysmobts-mgr.cfg \
-	doc/examples/virtual/openbsc-virtual.cfg \
-	doc/examples/virtual/osmobts-virtual.cfg \
 	git-version-gen .version \
 	README.md
+
+DISTCHECK_CONFIGURE_FLAGS = \
+	--with-systemdsystemunitdir=$$dc_install_base/$(systemdsystemunitdir)
 
 @RELMAKE@
 
