--- a/contrib/systemd/osmo-bts-trx.service
+++ b/contrib/systemd/osmo-bts-trx.service
@@ -3,7 +3,7 @@ Description=Osmocom osmo-bts for osmo-trx
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/osmo-bts-trx -s -c /etc/osmocom/osmo-bts.cfg
+ExecStart=/usr/bin/osmo-bts-trx -s -c /etc/osmocom/osmo-bts-trx.cfg
 Restart=always
 RestartSec=2
 
