--- a/doc/examples/octphy/osmo-bts-octphy.cfg
+++ b/doc/examples/octphy/osmo-bts-octphy.cfg
@@ -20,15 +20,12 @@ line vty
  no login
 !
 phy 0
- octphy hw-addr 00:0c:de:ad:fa:ce
- octphy net-device eth2
+ octphy hw-addr 00:0C:90:2e:80:1e
+ octphy net-device eth0.2342
  instance 0
- instance 1
 bts 0
  band 1800
  ipa unit-id 1234 0
  oml remote-ip 127.0.0.1
  trx 0
   phy 0 instance 0
- trx 1
-  phy 0 instance 1
