UT for SDR subsytem

--- a/firmware/ec/test/Makefile
+++ b/firmware/ec/test/Makefile
@@ -146,6 +146,10 @@ TEST_OCGPIO_SRC=$(OCWARE_ROOT)/src/drivers/OcGpio.c $(OCWARE_ROOT)/src/devices/i
 $(PATHB)Test_OcGpio$(TARGET_EXTENSION): $(STD_FILES) $(TEST_OCGPIO_SRC)
 	$(C_COMPILER) $(CFLAGS) $(INC_DIRS) $(SYMBOLS) $^ -o $@    
 
+TEST_SUBSYS_SDR_SRC=$(OCWARE_ROOT)/src/subsystem/sdr/sdr.c $(OCWARE_ROOT)/src/drivers/OcGpio.c fake/fake_GPIO.c fake/fake_ThreadedISR.c $(OCWARE_ROOT)/src/helpers/memory.c stub/stub_GateMutex.c $(OCWARE_ROOT)/src/drivers/GpioPCA9557.c $(OCWARE_ROOT)/src/Devices/pca9557.c fake/fake_I2C.c $(OCWARE_ROOT)/src/devices/i2cbus.c
+$(PATHB)Test_subsys_sdr$(TARGET_EXTENSION): $(STD_FILES) $(TEST_SUBSYS_SDR_SRC)
+	$(C_COMPILER) $(CFLAGS) $(INC_DIRS) $(SYMBOLS) $^ -o $@    
+
 # Dummy target to allow us to force rebuild of testresults every time
 FORCE:
 
