--- a/firmware/ec/.settings/org.eclipse.core.resources.prefs
+++ b/firmware/ec/.settings/org.eclipse.core.resources.prefs
@@ -76,3 +76,68 @@ encoding//Debug/src/utils/subdir_rules.mk=UTF-8
 encoding//Debug/src/utils/subdir_vars.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Release/config/oc-sdr/subdir_rules.mk=UTF-8
+encoding//Release/config/oc-sdr/subdir_vars.mk=UTF-8
+encoding//Release/makefile=UTF-8
+encoding//Release/objects.mk=UTF-8
+encoding//Release/platform/oc-sdr/cfg/subdir_rules.mk=UTF-8
+encoding//Release/platform/oc-sdr/cfg/subdir_vars.mk=UTF-8
+encoding//Release/platform/oc-sdr/schema/subdir_rules.mk=UTF-8
+encoding//Release/platform/oc-sdr/schema/subdir_vars.mk=UTF-8
+encoding//Release/sources.mk=UTF-8
+encoding//Release/src/comm/subdir_rules.mk=UTF-8
+encoding//Release/src/comm/subdir_vars.mk=UTF-8
+encoding//Release/src/devices/i2c/subdir_rules.mk=UTF-8
+encoding//Release/src/devices/i2c/subdir_vars.mk=UTF-8
+encoding//Release/src/devices/ocmp_wrappers/subdir_rules.mk=UTF-8
+encoding//Release/src/devices/ocmp_wrappers/subdir_vars.mk=UTF-8
+encoding//Release/src/devices/subdir_rules.mk=UTF-8
+encoding//Release/src/devices/subdir_vars.mk=UTF-8
+encoding//Release/src/devices/uart/subdir_rules.mk=UTF-8
+encoding//Release/src/devices/uart/subdir_vars.mk=UTF-8
+encoding//Release/src/drivers/subdir_rules.mk=UTF-8
+encoding//Release/src/drivers/subdir_vars.mk=UTF-8
+encoding//Release/src/helpers/subdir_rules.mk=UTF-8
+encoding//Release/src/helpers/subdir_vars.mk=UTF-8
+encoding//Release/src/interfaces/Ethernet/subdir_rules.mk=UTF-8
+encoding//Release/src/interfaces/Ethernet/subdir_vars.mk=UTF-8
+encoding//Release/src/interfaces/UART/subdir_rules.mk=UTF-8
+encoding//Release/src/interfaces/UART/subdir_vars.mk=UTF-8
+encoding//Release/src/interfaces/USB/subdir_rules.mk=UTF-8
+encoding//Release/src/interfaces/USB/subdir_vars.mk=UTF-8
+encoding//Release/src/post/subdir_rules.mk=UTF-8
+encoding//Release/src/post/subdir_vars.mk=UTF-8
+encoding//Release/src/registry/subdir_rules.mk=UTF-8
+encoding//Release/src/registry/subdir_vars.mk=UTF-8
+encoding//Release/src/subdir_rules.mk=UTF-8
+encoding//Release/src/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/bms/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/bms/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/ethernet/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/ethernet/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/gpp/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/gpp/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/hci/led/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/hci/led/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/hci/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/hci/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/obc/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/obc/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/power/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/power/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/rffe/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/rffe/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/sdr/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/sdr/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/sync/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/sync/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/sys/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/sys/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/testModule/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/testModule/subdir_vars.mk=UTF-8
+encoding//Release/src/subsystem/watchdog/subdir_rules.mk=UTF-8
+encoding//Release/src/subsystem/watchdog/subdir_vars.mk=UTF-8
+encoding//Release/src/utils/subdir_rules.mk=UTF-8
+encoding//Release/src/utils/subdir_vars.mk=UTF-8
+encoding//Release/subdir_rules.mk=UTF-8
+encoding//Release/subdir_vars.mk=UTF-8
